--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -32,5 +32,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Test tag
       run: |
-        echo "TAG=`echo refs/tags/apache-iceberg-1.7.1 | tr -d -c 0-9.`" >> $GITHUB_ENV
-        echo ${{ secrets.DOCKERHUB_USER }}/$DOCKER_IMAGE_TAG:${{ env.TAG }}
+        echo ${{ secrets.DOCKERHUB_USER }}/$DOCKER_IMAGE_TAG:`echo refs/tags/apache-iceberg-1.7.1 | tr -d -c 0-9.`
