--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -25,6 +25,7 @@ on:
 env:
   DOCKER_IMAGE_TAG: iceberg-rest-fixture
   DOCKER_IMAGE_VERSION: latest
+  DOCKER_REPOSITORY: ${{ env.DOCKER_REPOSITORY || 'apache' }}
 
 jobs:
   build:
@@ -37,4 +38,4 @@ jobs:
         echo "DOCKER_IMAGE_VERSION=`echo refs/tags/apache-iceberg-1.7.1 | tr -d -c 0-9.`" >> "$GITHUB_ENV"
     - name: Test tag
       run: |
-        echo ${{ secrets.DOCKERHUB_USER }}/$DOCKER_IMAGE_TAG:$DOCKER_IMAGE_VERSION
+        echo $DOCKER_REPOSITORY/$DOCKER_IMAGE_TAG:$DOCKER_IMAGE_VERSION
